--- a/scripts/3.1_figures.Rmd
+++ b/scripts/3.1_figures.Rmd
@@ -245,6 +245,11 @@ area_s <- cc_calc_area_per_lc_abn(land_cover_dt = s_dt,
                                   land_cover_raster = s$y2017)
 
 # ------------- plot ---------------- #
+cc_save_plot_lc_abn_area(input_df = area_s, subtitle = "Shaanxi/Shanxi Provinces, China", 
+                         outfile_label = "s",
+                         width = 6, height = 4)
+
+# manually
 gg_lc_abn_area_s <- ggplot(data = area_s, aes(year, area_ha)) +
   theme_classic() +
   theme(axis.text.x = element_text(angle = 320, vjust = 1, hjust = 0)) +
@@ -271,194 +276,128 @@ gg_lc_abn_area_s
 
 
 
-cc_save_plot_lc_abn_area(df = area_s, subtitle = "Shaanxi/Shanxi Provinces, China", outfile_label = "s")
 
 ```
 
 
 ```{r abandonment-persistence}
+# testing
 s_age[get(paste0("y", 1987:2017)[2]) > 0]
 s_age[y1988 > 0]
 
-persist_l <- lapply(1:30, FUN = function(j) {
-  c(
-    sapply(1:(31 - j), FUN = function(i) {
-      s_age[get(paste0("y", 1987:2017)[i + j]) == i, .N]
-      }),
-    rep(NA, j)
-    )
-  }
-)
 
-# ----------------------- see functions in _util_dt_filter_functions ------------------------------------ #
+# ----------------------- see functions in _util_dt_filter_functions ------------------------------------
+# manual
+persistence_count_long <- cc_calc_persistence(age_dt = s_age, land_cover_raster = s$y2017, 
+                                              stat_proportion = FALSE,
+                                              NA_first = FALSE)
 
-persistence_count_long <- cc_calc_persistence(age_dt = s_age, 
-                                               land_cover_raster = s$y2017, 
-                                               stat_proportion = FALSE,
-                                               pivot_to_long)
+persistence_count_long2 <- cc_calc_persistence(age_dt = s_age, land_cover_raster = s$y2017, 
+                                              stat_proportion = FALSE, include_wide = TRUE,
+                                              NA_first = FALSE)
 
-# pick up here, and write up a function to save persistence plots, based on whether count, pivot, etc.
+# as a list
 
-persistence_count <- cc_calc_persistence(
-  s_age, stat = "count" = FALSE, pivot_to_long = FALSE)
-
-persistence_count_long_na_first <- cc_calc_persistence(
-  s_age, stat = "count", pivot_to_long = TRUE, NA_first = TRUE)
-
-persistence_percent_long_na_first <- cc_calc_persistence(s_age, NA_first = TRUE)
-persistence_percent_long <- cc_calc_persistence(s_age)
-persistence_percent <- cc_calc_persistence(s_age, pivot_to_long = FALSE)
+persistence_list_s <- cc_calc_persistence_all(age_dt = s_age, land_cover_raster = s$y2017)
 
 
 # ----------------------------------- plot ------------------------------------------------- #
 
 # plot the count of pixels abandoned (or age 1) in each year. This shows that over time, a greater amount of land is abandoned at once.
-ggplot(data = filter(persistence_count_long, time_abn == 1)) + 
+ggplot(data = filter(persistence_list_s$count, time_abn == 1)) + 
   theme_classic() + 
-  geom_point(mapping = aes(x = year_abn, y = count, color = year_abn))
-
-# raw counts
-gg_abn_decay_count <- ggplot(data = persistence_count_long, aes(time_abn, count)) + 
-  theme_classic() + 
-  geom_line(mapping = aes(x = time_abn, y = count,
-                          group = year_abn, color = year_abn), 
-            size = 1.25
-            ) + 
-  labs(y = expression("Count of pixels abandoned") , 
-       x = "Years since initial abandonment", 
-       title = "Persistence of Abandoned Land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       color = "Year Abandoned") + 
-  scale_color_distiller(palette = "Greens") + theme(legend.position = "bottom")
-
-# as percentage
-gg_abn_decay <- ggplot(data = persistence_percent_long, aes(time_abn, prop_remaining)) + 
-  theme_classic() + 
-  geom_line(mapping = aes(x = time_abn, y = prop_remaining,
-                          group = year_abn, color = year_abn), 
-            size = 1.25
-            ) + 
-  labs(y = expression("Proportion remaining abandoned (%))") , 
-       x = "Years since initial abandonment", 
-       title = "Persistence of Abandoned Land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       color = "Year Abandoned") + 
-  scale_color_distiller(palette = "Greens") + theme(legend.position = "bottom")
-
-gg_abn_decay_na_first <- ggplot(data = persistence_percent_long_na_first, 
-                                aes(year, prop_remaining)) + 
-  theme_classic() + 
-  geom_line(mapping = aes(x = year, y = prop_remaining,
-                          group = year_abn, color = year_abn), 
-            size = 1.25
-            ) + 
-  labs(y = expression("Proportion remaining abandoned (%))") , 
-       x = "Year", 
-       title = "Persistence of Abandoned Land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       color = "Year Abandoned") + 
-  scale_color_distiller(palette = "Greens") + theme(legend.position = "bottom") + 
-  scale_x_continuous(n.breaks = 10)
-
-gg_abn_decay_count_na_first <- ggplot(data = persistence_count_long_na_first, 
-                                      aes(year, count)) + 
-  theme_classic() + 
-  geom_line(mapping = aes(x = year, y = count,
-                          group = year_abn, color = year_abn), 
-            size = 1.25
-            ) + 
-  labs(y = expression("Area abandoned (10"^{6}*" ha)") , 
-       x = "Year", 
-       title = "Persistence of Abandoned Land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       color = "Year Abandoned") + 
-  scale_color_distiller(palette = "Greens") + theme(legend.position = "bottom") + 
-  scale_x_continuous(n.breaks = 10)
-
-gg_abn_decay
-gg_abn_decay_count
-gg_abn_decay_na_first
+  geom_point(mapping = aes(x = year_abn, y = area_ha, color = year_abn))
 
 
-cc_save_plot_abn_persistence <- function(df, subtitle, outfile_label) {
-  
-  gg_lc_abn_area <- ggplot(data = df, aes(year, area_ha)) +
-    theme_classic() +
-    # theme(axis.text.x = element_text(angle = 320, vjust = 1, hjust = 0)) +
-    labs(y = expression("Area  (10"^{6}*" ha)") , 
-         x = "Year", 
-         title = "Area by Land Cover, with Abandonment",
-         subtitle = subtitle,
-         color = "Land Cover") + 
-    geom_line(mapping = aes(x = year, y = area_ha / (10^6), # convert to millions of ha
-                            group = lc, color = lc),
-              size = 1.2) + 
-    scale_x_continuous(n.breaks = 10)
-  
-  # save
-  png(filename = paste0("/Users/christophercrawford/Google Drive/_Projects/abandonment_trajectories/output/plots/lc_abn_area_", 
-                        outfile_label, ".png"), 
-      width = 7, height = 5, units = "in", res = 400)
-  
-  print(gg_lc_abn_area)
-  dev.off()
-}
-
+# save as a plot
+cc_save_plot_abn_persistence(input_list = persistence_list_s, subtitle = "Shaanxi/Shanxi Provinces, China", outfile_label = "_s")
 ```
 
 ```{r abn-gain-loss-area}
 # calculate the abandonment area turnover
 abn_area_change_s <- cc_calc_abn_area_diff(age_dt = s_age, area_raster = s_area)
 
+cc_save_plot_area_gain_loss(input_df = abn_area_change_s, 
+                            subtitle = "Shaanxi/Shanxi Provinces, China", outfile_label = "_s",
+                            width = 6)
 
-# gain, loss, and net change in abandoned area, over time
-gg_abn_area_change_s <- ggplot() + 
-  theme_classic() + 
-  geom_col(data = filter(abn_area_change_s, direction != "net"),
-           mapping = aes(x = year, y = area_ha / (10^3), 
-                         group = direction, fill = direction)) + 
-  geom_line(data = filter(abn_area_change_s, direction == "net"),
-           mapping = aes(x = year, y = area_ha / (10^3), color = "Net Change in Area"),
-           size = 1.5) + 
-  labs(y = expression("Change in area abandoned (10"^{3}*" ha)"), 
-       x = "Year", 
-       title = "Change in Area of Abandoned Land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       fill = NULL, #"Change in Area",
-       color = NULL) + 
-  scale_color_manual(values = c("black"),
-                     labels = "Net Change in Area") + 
-  scale_fill_manual(values = brewer_pal(palette = "Greens")(5)[3:2],
-                    labels = c("Area Gained", "Area Lost")) + 
-  theme(legend.position = "bottom")
-
-gg_abn_area_change_s
-
-
-# save to file
-png(filename = paste0(p_output, "plots/abn_area_change_s.png"), 
-    width = 7, height = 5, units = "in", res = 400)
-print(gg_abn_area_change_s)
-dev.off()
 
 ```
 
 ```{r abn-area-by-age-class}
+area_s %>% filter(lc == "Abandoned")
+persistence_list_s$count_na_first
+persistence_list_s$count
 
-gg_abn_area_s <- ggplot(data = filter(area_s, lc == "Abandoned"), 
-                     aes(year, area_ha)) +
+# first plot
+age_class0 <- ggplot(data = persistence_list_s$count_na_first) + 
   theme_classic() +
-  theme(axis.text.x = element_text(angle = 320, vjust = 1, hjust = 0)) +
-  labs(y = expression("Area  (10"^{6}*" ha)") , 
-       x = "Year", 
-       title = "Area of Abandoned land",
-       subtitle = "Shaanxi/Shanxi Provinces, China",
-       color = "Land Cover") + 
-  geom_line(mapping = aes(x = year, y = area_ha / (10^6), # convert to millions of ha
-                          group = lc, color = lc))
+  geom_col(mapping = aes(x = year, y = area_ha / 10^3, group = year_abn, fill = year_abn)) + 
+  labs(y = expression("Area abandoned (10"^{3}*" ha)") , 
+         x = "Years since initial abandonment", 
+         title = "Area of Abandoned Land, by Age Class",
+         subtitle = "Shaanxi/Shanxi Province, China",
+         fill = "Year Abandoned") + 
+  scale_fill_distiller(palette = "Greens") + theme(legend.position = "bottom") + 
+  scale_x_continuous(n.breaks = 10)
 
-gg_lc_abn_area_s
-gg_abn_area_s
+# trying some massaging
+age_class_df <- persistence_list_s$count_na_first %>% 
+  mutate(age = year - year_abn + 1) %>% 
+  mutate(bins = ifelse(age > 0 & age <= 5, "1 to 5 years",
+                       ifelse(age > 5 & age <= 10, "5 to 10 years",
+                              ifelse(age > 10 & age <= 15, "10 to 15 years",
+                                     ifelse(age > 15 & age <= 20, "15 to 20 years",
+                                            ifelse(age > 20 & age <= 30, "20 to 30 years", NA)
+                                            ))))) %>%
+  mutate(bins = as_factor(bins))
+
+# plot
+
+
+
+# function: 
+cc_save_plot_area_by_age_class <- function(input_list, subtitle, outfile_label,
+                                        width = 7, height = 5) {
+  
+  age_class_base <- ggplot(data = input_list$count_na_first) + 
+  theme_classic() +
+  labs(y = expression("Area abandoned (10"^{3}*" ha)") , 
+         x = "Year", 
+         title = "Area of Abandoned Land, by Age Class",
+         subtitle = subtitle,
+         fill = "Age") + 
+  scale_x_continuous(n.breaks = 10)
+  
+  age_class_continuous <- age_class_base +
+    geom_col(mapping = aes(x = year, y = area_ha / 10^3, group = age, fill = age),
+             position = position_stack(reverse = TRUE)
+             ) + 
+    scale_fill_distiller(palette = "Greens", direction = 1)
+  
+  
+  age_class_bins <- age_class_base +
+    geom_col(mapping = aes(x = year, y = area_ha / 10^3, group = bins, fill = bins),
+             position = position_stack(reverse = TRUE)
+             ) +
+    scale_fill_brewer(palette = "Greens", direction = 1) 
+
+  
+  # save to file
+  png(filename = paste0(p_output, "plots/abn_area_by_class_cont", outfile_label, ".png"), 
+      width = width, height = height, units = "in", res = 400)
+  print(age_class_continuous)
+  dev.off()
+  
+  png(filename = paste0(p_output, "plots/abn_area_by_class_bins", outfile_label, ".png"), 
+      width = width, height = height, units = "in", res = 400)
+  print(age_class_bins)
+  dev.off()
+  
+}
+
+cc_save_plot_area_by_age_class(input_list = persistence_list_s, 
+                               subtitle = "Shaanxi/Shanxi Provinces, China", outfile_label = "_s")
 
 ```
 
@@ -648,4 +587,22 @@ dev.off()
 ```
 
 
+
+```{r master-functions}
+
+# ------------- calculate total area per lc, with abandonment ---------------- #
+area_s <- cc_calc_area_per_lc_abn(land_cover_dt = s_dt, 
+                                  abn_age_dt = s_age, 
+                                  land_cover_raster = s$y2017)
+
+cc_save_plot_lc_abn_area(input_df = area_s, subtitle = "Shaanxi/Shanxi Provinces, China", 
+                         outfile_label = "s",
+                         width = 6, height = 4)
+
+# ------------------------ abandonment persistence --------------------------- #
+persistence_list_s <- cc_calc_persistence_all(age_dt = s_age, land_cover_raster = s$y2017)
+
+cc_save_plot_abn_persistence(input_list = persistence_list_s, subtitle = "Shaanxi/Shanxi Provinces, China", outfile_label = "_s")
+
+```
 
